RESOLVED FIXED192854
ContentExtensions: DFANode.cpp:66:44: error: narrowing conversion of '-1' from 'int' to 'char' inside { }
https://bugs.webkit.org/show_bug.cgi?id=192854
Summary ContentExtensions: DFANode.cpp:66:44: error: narrowing conversion of '-1' fro...
Claudio Saavedra
Reported 2018-12-19 08:12:40 PST
ContentExtensions: DFANode.cpp:66:44: error: narrowing conversion of '-1' from 'int' to 'char' inside { }
Attachments
Patch (1.25 KB, patch)
2018-12-19 08:14 PST, Claudio Saavedra
no flags
Patch (1.22 KB, patch)
2018-12-19 08:17 PST, Claudio Saavedra
no flags
Claudio Saavedra
Comment 1 2018-12-19 08:14:40 PST
EWS Watchlist
Comment 2 2018-12-19 08:15:55 PST
Attachment 357680 [details] did not pass style-queue: ERROR: Source/WebCore/ChangeLog:8: You should remove the 'No new tests' and either add and list tests, or explain why no new tests were possible. [changelog/nonewtests] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Claudio Saavedra
Comment 3 2018-12-19 08:17:44 PST
WebKit Commit Bot
Comment 4 2018-12-19 14:24:14 PST
Comment on attachment 357681 [details] Patch Clearing flags on attachment: 357681 Committed r239395: <https://trac.webkit.org/changeset/239395>
WebKit Commit Bot
Comment 5 2018-12-19 14:24:16 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6 2018-12-19 14:25:33 PST
Note You need to log in before you can comment on or make changes to this bug.