ContentExtensions: DFANode.cpp:66:44: error: narrowing conversion of '-1' from 'int' to 'char' inside { } https://bugs.webkit.org/show_bug.cgi?id=192854

Reviewed by Alex Christensen.

* contentextensions/DFANode.h: Define CharRange's chars as signed


Canonical link: https://commits.webkit.org/207440@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@239395 268f45cc-cd09-0410-ab3c-d52691b4dbfc